# CMake

./: test.txt
1. hello_world/: CMakeCache.txt  CMakeLists.txt  Makefile
10. my_math_share/: CMakeLists.txt
10. my_math_share/app/: CMakeLists.txt
10. my_math_share/my_lib/: CMakeLists.txt
11. install_share_mymath/mylib/: CMakeLists.txt
12. find_jsoncpp_config/: CMakeLists.txt  main.cpp
13. ctest_MyMath/: CMakeLists.txt  main.cpp
14. cmake_language/: CMakeLists.txt
14. cmake_language/CaCheScop/: CMakeLists.txt
14. cmake_language/DirectScope/: CMakeLists.txt
14. cmake_language/DirectScope/sub/: CMakeLists.txt
14. cmake_language/EnvVar/: CMakeLists.txt
14. cmake_language/IF_basic/: CMakeLists.txt
14. cmake_language/foreach/: CMakeLists.txt
14. cmake_language/function/: CMakeLists.txt
14. cmake_language/list函数/: CMakeLists.txt
14. cmake_language/while/: CMakeLists.txt
2. cmake_tools/: CMakeLists.txt  test.cpp
3. install_hello/: CMakeLists.txt  main.cpp
3. install_hello/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
4. test_include/: CMakeLists.txt
4. test_include/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
4. test_include/sub/: sub.cmake
5. my_math/app/: CMakeLists.txt  main.cpp
5. my_math/my_lib/: CMakeLists.txt  CMakelists.txt
6. test_target_link_libraries/: CMakeLists.txt
6. test_target_link_libraries/app/: CMakeLists.txt
7. test_set_target_properties/: CMakeLists.txt
7. test_set_target_properties/src/: CMakeLists.txt
8. install_static_mymath/: CMakeLists.txt
8. install_static_mymath/mylib/: CMakeLists.txt
9. test_mymath/: CMakeLists.txt  main.cpp
hello_world/: cmake_install.cmake
