add_library(add SHARED add.cpp)

set_target_properties(add PROPERTIES
    # 1. 编译类参数
    # COMPILE_OPTIONS "-g -O3 -fPIC" # 旧版本不能这样写, 要分开写
    COMPILE_OPTIONS "-g"
    COMPILE_OPTIONS "-O3"
    COMPILE_OPTIONS "-fPIC"
    INCLUDE_DIRECTORIES "/public"
    INTERFACE_INCLUDE_DIRECTORIES "/interface"

    # 2. 链接类参数
    LINK_DIRECTORIES "/public"
    INTERFACE_LINK_DIRECTORIES "/interface"
    LINK_LIBRARIES "curl"
    INTERFACE_LINK_LIBRARIES "jsoncpp"

    # 3. 输出类参数
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"

    # 4. 安装类参数
    BUILD_RPATH "${CMAKE_BINARY_DIR}/lib"
    INSTALL_RPATH "lib" # /usr/local/bin
    OUTPUT_NAME "add"
    VERSION "1.2.3"
    SOVERSION "20"
)